/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.manager;

import "api/common/r.proto";
import "api/common/page.proto";
import "api/common/entity.proto";
import "manager_query.proto";
import "manager_query_page.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.center.manager";
option java_outer_classname = "DriverProto";
option objc_class_prefix = "Manager";
option java_multiple_files = true;

/*
Api
*/
service DriverApi {
  rpc SelectByPage (GrpcPageDriverQuery) returns (GrpcRPageDriverDTO);
  rpc SelectByDriverId (GrpcDriverQuery) returns (GrpcRDriverDTO);
  rpc SelectByDeviceId (GrpcDeviceQuery) returns (GrpcRDriverDTO);
}

/*
Driver R Page
*/
message GrpcRPageDriverDTO {
  /*
  R
  */
  GrpcR result = 1;

  /*
  Data
  */
  GrpcPageDriverDTO data = 2;
}

/*
Driver Page
*/
message GrpcPageDriverDTO {
  /*
  Page
  */
  GrpcPage page = 1;

  /*
  Data
  */
  repeated GrpcDriverDTO data = 2;
}

/*
Driver R
*/
message GrpcRDriverDTO {
  /*
  R
  */
  GrpcR result = 1;

  /*
  Data
  */
  GrpcDriverDTO data = 2;
}
